--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Permalinks
 permalink:        pretty
 
-title:            Words from NOBODY
-description:      'Nothing.'
+title:            Janmelin¡®s Blog
+description:      'Word from Nobady.'
 
 baseurl:          /Blog
 
