--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Permalinks
 permalink:        pretty
 
-title:            Janmelin¡®s Blog
+title:            Janmelin's Blog
 description:      'Word from Nobady.'
 
 baseurl:          /Blog
