--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Permalinks
 permalink:        pretty
 
-title:            Janmelin's Blog
-description:      'Word from Nobady.'
+title:            Joe Tang's Blog
+description:      'Murmur from Joe.'
 
-baseurl:          /Blog
+baseurl:          /blog
 
 paginate:         8
 
-version:          1.0.0
+version:          1.0.1
 
-githubrepo:             https://github.com/Janmelin/Blog
+githubrepo:       https://github.com/Janmelin/Blog
