--- a/_config.yml
+++ b/_config.yml
@@ -10,4 +10,4 @@ paginate:         8
 
 version:          1.0.1
 
-githubrepo:       https://github.com/Janmelin/Blog
+githubrepo:       https://github.com/Janmelin/blog
